feat: 添加页面加载进度条
- 引入NProgress库
- 在路由守卫中添加进度条逻辑

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jquery": "^3.7.1",
     "jsonwebtoken": "^9.0.2",
     "lottie-web": "^5.12.2",
+    "nprogress": "^0.2.0",
     "sweetalert2": "^11.17.2",
     "tailwindcss": "^4.0.14",
     "vue": "^2.6.14",
