--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
@@ -17,10 +18,12 @@
     "core-js": "^3.8.3",
     "element-plus": "^2.9.7",
     "element-ui": "^2.15.14",
+    "gh-pages": "^6.3.0",
     "jinrishici": "^1.0.6",
     "jquery": "^3.7.1",
     "jsonwebtoken": "^9.0.2",
     "lottie-web": "^5.12.2",
+    "moment": "^2.30.1",
     "nprogress": "^0.2.0",
     "sweetalert2": "^11.17.2",
     "tailwindcss": "^4.0.14",
